--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>me.carleslc</groupId>
 	<artifactId>Simple-YAML</artifactId>
-	<version>1.1</version>
+	<version>1.2</version>
 	<name>Simple-YAML</name>
 
 	<properties>
@@ -36,6 +36,25 @@
 				</excludes>
 			</resource>
 		</resources>
+		<!--  Uncomment the following plugin to make a fat JAR (with all dependencies packed inside)
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<finalName>${artifactId}-${version}</finalName>
+				</configuration>
+			</plugin>
+		</plugins>
+		-->
 	</build>
 
 </project>
