--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>me.carleslc</groupId>
 	<artifactId>Simple-YAML</artifactId>
-	<version>1.3</version>
+	<version>1.4</version>
 	<name>Simple-YAML</name>
 
 	<properties>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>23.0</version>
+			<version>26.0-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
@@ -36,25 +36,6 @@
 				</excludes>
 			</resource>
 		</resources>
-		<!-- Build with all dependencies packed inside -->
-		<plugins>
-			<plugin>
-				<version>3.1.0</version>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<finalName>${project.artifactId}-${project.version}</finalName>
-				</configuration>
-			</plugin>
-		</plugins>
 	</build>
 
 </project>
