--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>26.0-jre</version>
+			<version>21.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
