--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: Simple YAML
+description: A Java API that provides an easy-to-use way to store data using the YAML format.
+show_downloads: true
