--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.25</version>
+			<groupId>com.amihaiemil.web</groupId>
+			<artifactId>eo-yaml</artifactId>
+			<version>5.1.3</version>
 		</dependency>
 	</dependencies>
 
