--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
                 <version>3.2.0</version>
                 <configuration>
                     <source>${java.version}</source>
+                    <show>private</show>
                 </configuration>
                 <executions>
                     <execution>
