Attach javadoc jar

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <id>attach-javadocs</id>
                         <phase>install</phase>
                         <goals>
-                            <goal>javadoc</goal>
+                            <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
