Comment fixes + Header & Comment Formatter

--- a/Simple-Yaml/src/test/resources/test-comments.yml
+++ b/Simple-Yaml/src/test/resources/test-comments.yml
@@ -1,6 +1,6 @@
-#####################
-## INITIAL COMMENT ##
-#####################
+######################
+##  HEADER COMMENT  ##
+######################
 
 # Test comments
 test:
@@ -19,8 +19,9 @@ test:
     - separated
       # Comment on a list item
     - entry # :)
-  # Block #comment with # hashtag
-  comment: 'text with # hashtag' # Side #comment with # hashtag
+  # This is a
+  # multiline comment
+  wrap: '# this is not a comment'
 
 # Wonderful number
 math:
