--- a/Simple-Yaml/src/test/resources/test-comments.yml
+++ b/Simple-Yaml/src/test/resources/test-comments.yml
@@ -17,22 +17,24 @@ test:
     - in
     - a
     - separated
-      # Comment on a list item
+    # Comment on a list item
     - entry # :)
   # This is a
   # multiline comment
   wrap: '# this is not a comment'
 
-# Wonderful number
+  blank: ''
+
+# Wonderful numbers
 math:
   pi: 3.141592653589793
-  # Comment without direct key
+  # Side comment below
 
 # Some timestamps
 timestamp:
   # ISO
   canonicalDate: 2020-07-04T13:18:04.458Z
   # Date/Time with format
-  formattedDate: 04/07/2020 15:18:04
+  formattedDate: 04/07/2020 15:18:04 # dd/MM/yyyy HH:mm:ss
 
 # End
